--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
   </header>
   <div class="p-3 mb-2 bg-primary text-white">
     <h1>Añadir Usuario</h1>
-    <button onclick="añadirUsuario();">Añadir Usuarios a Local Storage</button>
+    <button id="addUser" type="button" >Añadir Usuarios a Local Storage</button>
+    <h2 id="newUser"></h2>
     <h1>Actualizar</h1>
-    <button onclick="actualizar();">actualizar y ordenar en forma ascendente por ethereum</button>
+    <button id="update" type="button"">actualizar y ordenar en forma ascendente por ethereum</button>
     <h2 id="objeto"></h2>
     <h1>ClearUsuarios</h1>
-    <button onclick="clearUsuarios();">limpiar datos de variables locales</button>
+    <button id="clear" type="button">limpiar datos de variables locales</button>
     <h1>Eventos:</h1>
     <div id="cuadrado" style="background-color: brown;width: 300px;height: 110px;text-align: center;">
       <h1>Mouse Over</h1>
