--- a/Electricidad.html
+++ b/Electricidad.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
-<body>
+<body class="p-3 mb-2 bg-primary text-white">
     <header>
         <div id="nav-placeholder">
         </div>
