--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <h1>Mouse Over</h1>
       <h1>Mouse Over2</h1>
     </div>
+    <br/>
+    <div id="concatenar" class="concatenar">
+      concatenar animacion
+    </div>
   </div>
   
   <script src="script.js"></script>
