--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   <link rel="stylesheet" href="styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body class="p-3 mb-2 bg-primary text-white">
   <header>
     <div id="nav-placeholder" class="nav1"></div>
   </header>
+  <button id="addUser">añadir usuario</button>
   <div class="div1">
     <h1>Añadir Usuario</h1>
-    <form method="post" id="addUser" onsubmit="return enviar()" style="background-color: rgba(87, 87, 87, 0.8); width: 500px; padding: 15px;
+    <form method="post" style="background-color: rgba(87, 87, 87, 0.8); width: 500px; padding: 15px;
       border-radius: 10px;">
       <div class="form-row">
         <div class="col">
@@ -36,17 +37,18 @@
       </div>
       <br />
       <div style="display: flex; justify-content: center;">
-        <button type="submit" class="btn btn-primary" id="botonEnviar">Enviar</button>
+        <button type="button" class="btn btn-primary" id="send">Enviar</button>
       </div>
     </form>
+
 
     <p id="respa">respuesta</p>
 
     <br />
     <h2 id="newUser"></h2>
     <h1>Actualizar</h1>
-    <button id="update" type="button"">actualizar y ordenar en forma ascendente por ethereum</button>
-    <h2 id=" objeto"></h2>
+    <button id="update" type="button"">actualizar y ordenar en forma ascendente por numero de placas</button>
+    <h2 id="objeto"></h2>
       <h1>ClearUsuarios</h1>
       <button id="clear" type="button">limpiar datos de variables locales</button>
       <h1>Eventos:</h1>
