--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <br />
       <div style="display: flex; justify-content: center;">
-        <button type="button" class="btn btn-primary" id="send">Enviar</button>
+        <button type="submit" class="btn btn-primary" id="send">Enviar</button>
       </div>
     </form>
 
