--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </form>
     </div>
   </div>
+  <h3 id="newUser"></h3>
   <h1>Actualizar</h1>
   <div class=" form1 col-md-auto">
     <button id="update" type="button"">actualizar</button>
@@ -46,6 +47,10 @@
   </div>
   <h1>ClearUsuarios</h1>
   <button id="clear" type="button">limpiar datos de variables locales</button>
+  <br/>
+  <input type="text" class="form-control" placeholder="pokemon, ejemplo: pikachu" id="pokemon">
+  <h3 id="pokemonInfo"></h3>
+  <button id="getJson" type="button">Buscar</button>
   <h1>Eventos:</h1>
   <div id="cuadrado" style="background-color: brown;width: 300px;height: 110px;text-align: center;">
     <h1>Mouse Over</h1>
