--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Registro de Mineria Ethereum</a>
+      <a class="navbar-brand" href="#">Registro de Inversiones</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,14 +10,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">Incio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Produccion.html">Produccion</a>
+            <a class="nav-link" href="Produccion.html">Item 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Pagos.html">Pagos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Electricidad.html">Electricidad</a>
-          </li>
+            <a class="nav-link" href="Pagos.html">Item 2</a>
           
         </ul>
         <form class="d-flex">
