--- a/nav.html
+++ b/nav.html
@@ -10,10 +10,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">Incio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Produccion.html">Item 1</a>
+            <a class="nav-link" href="#">Item 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Pagos.html">Item 2</a>
+            <a class="nav-link" href="#">Item 2</a>
           
         </ul>
         <form class="d-flex">
