--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="p-3 mb-2 bg-primary text-white">
   <header>
-    <div id="nav-placeholder" class="nav1"></div>
+    <!--- <div id="nav-placeholder" class="nav1"></div> --->
   </header>
 
 
@@ -28,7 +28,7 @@
   <div class="principal">
 
     <div class="div1">
-      <h1>Añadir Movimiento</h1>
+      <h2>Añadir Movimiento</h2>
 
       <form method="post" id="formMov" class="formMov">
         <select id="selectMovimiento">
@@ -42,8 +42,27 @@
         <button type="button" class="btn btn-primary" id="sendMov">Submit</button>
       </form>
 
-      <h3 id="apiInfo">Dolar Blue:</h3>
+      <h3 id="apiInfo">Api Dolar Blue:</h3>
       <button id="getJson" type="button">Buscar</button>
+
+      <div>
+        <h2>Crear nuevo usuario</h2>
+        <form method="post">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Nombre" id="nombre">
+          </div>
+          <br />
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Correo" id="correo">
+          </div>
+          <br />
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Nombre de Cuenta" id="cuenta">
+          </div>
+          <br />
+          <button type="button" class="btn btn-primary" id="send">Submit</button>
+        </form>
+      </div>
 
     </div>
 
@@ -58,24 +77,7 @@
   </div>
 
 
-  <div class="divCrear  col-md-4">
-    <h1>Crear nuevo usuario</h1>
-    <form method="post">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Nombre" id="nombre">
-      </div>
-      <br />
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Correo" id="correo">
-      </div>
-      <br />
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Nombre de Cuenta" id="cuenta">
-      </div>
-      <br />
-      <button type="button" class="btn btn-primary" id="send">Submit</button>
-    </form>
-  </div>
+  
 
   <h3 id="newUser"></h3>
 
