--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
     <div class="update col-md-8">
       <h1>Actualizar</h1>
-      <button id="update" type="button"">actualizar</button>
-    <button id=" ocultarU" type="button" style="display: none;">ocultar</button>
+      <button id="update" type="button"">mostrar</button>
+    <button id="ocultarU" type="button" style="display: none;">ocultar</button>
       <h4 id="objeto" style="display: none;"></h4>
     </div>
 
