--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
     <div class="update col-md-8">
-      <h1>Actualizar</h1>
+      <h1>Lista de Usuarios</h1>
       <button id="update" type="button"">mostrar</button>
     <button id="ocultarU" type="button" style="display: none;">ocultar</button>
       <h4 id="objeto" style="display: none;"></h4>
